--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,15 @@
 {
-    "version": 2,
-    "rewrites": [
-        {
-            "source": "/api/:path*",
-            "destination": "/backend/index.js"
-        },
-        {
-            "source": "/((?!api/|.*\\..*).*)",
-            "destination": "/index.html"
-        }
-    ]
+  "version": 2,
+  "builds": [
+    {
+      "src": "server.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "server.js"
+    }
+  ]
 }
